apps/dashboard/app/globals.css
@import "tailwindcss";

/* 
 * Theme Configuration
 * ==================
 * 
 * Base Theme: Zinc (shadcn/ui)
 * Documentation: https://ui.shadcn.com/docs/theming#zinc
 * 
 * Custom Color Extensions
 * ----------------------
 * The following colors extend the default shadcn/ui palette:
 * - base-brand: Primary brand color
 * - base-error: Error state color
 * - base-warning: Warning state color
 * - base-success: Success state color
 * 
 * Icon Colors:
 * Follow the same color as the text color except for the following:
 * - dimmed: --color-icon-secondary
 * - highlight: --color-icon-primary
 * 
 * Design System Integration
 * ------------------------
 * The default shadcn-ui colors have been modified to align with our design system.
 * 
 * @dev TODO when adding new colors: 
 * - Review and update colors against Figma design system
 * - Ensure color consistency across all components
 * - Document any color modifications from default shadcn-ui
 */
 
@custom-variant dark (&:is(.dark *));

@theme {
  --breakpoint-xl4k: 2000px;
  --font-mono: var(--font-mono);
  --tracking-wider: 0.72px;
  --animate-accordion-down: accordion-down 0.2s ease-out;
  --animate-accordion-up: accordion-up 0.2s ease-out;

  /* Old System Colors */
  --color-middle-dark: var(--base-border);
  --color-light-dark: var(--base-muted);
  --color-icon-secondary: var(--base-ring);
  --color-tangerine: var(--base-brand);
  --color-background-contrast: var(--base-muted);
  --color-text-primary: var(--base-primary);


  /* Design System Colors */
  --color-primary: var(--base-primary);
  --color-secondary: var(--base-muted-foreground);
  --color-inverted: var(--base-background);
  --color-success: var(--base-success);
  --color-warning: var(--base-warning);
  --color-error: var(--base-error);
  --color-link: var(--base-brand);
  --color-link-hover: var(--base-brand);

  /* Icon Colors*/
  --color-dimmed: var(--base-dimmed);
  --color-highlight: var(--base-brand);

  /* Surface Colors */
  --color-surface-background: var(--base-background);
  --color-surface-default: var(--base-primary-foreground);
  --color-surface-contrast: var(--base-muted);
  --color-surface-hover: var(--base-border);
  --color-surface-action: var(--base-primary);
  --color-surface-action-hover: var(--base-primary-opacity);
  --color-surface-destructive: var(--base-destructive);
  --color-surface-destructive-hover: var(--base-destructive-hover);
  --color-surface-disabled: var(--base-muted);

  /* Light Surface Colors */
  --color-surface-success: var(--base-success-opacity);
  --color-surface-warning: var(--base-warning-opacity);
  --color-surface-error: var(--base-error-opacity);
  --color-surface-brand: var(--base-brand-opacity);
  --color-surface-opacity: var(--base-primary-opacity);

  /* Dark Surface Colors */
  --color-surface-success: var(--base-success);
  --color-surface-warning: var(--base-warning);
  --color-surface-error: var(--base-error);
  --color-surface-brand: var(--base-brand);


  /* Icon Sizes */
  --size-icon-xxs: 16px;
  --size-icon-xs: 20px;
  --size-icon-sm: 24px;
  --size-icon-md: 36px;
  --size-icon-lg: 48px;
  --size-icon-xl: 76px;

  /* Text Sizes */
  --text-alternative-sm: 13px;
  --text-alternative-sm--line-height: 18px;
  --text-alternative-sm--letter-spacing: 6%;

  --text-alternative-xs: 12px;
  --text-alternative-xs--line-height: 16px;
  --text-alternative-xs--letter-spacing: 6%;

  --text-xl: 18px;
  --text-xl--line-height: 24px;

  --text-lg: 16px;
  --text-lg--line-height: 24px;

  --text-md: 14px;
  --text-md--line-height: 20px;

  --text-sm: 12px;
  --text-sm--line-height: 16px;

  

  @keyframes accordion-down {
    from {
      height: 0;
    }
    to {
      height: var(--radix-accordion-content-height);
    }
  }
  @keyframes accordion-up {
    from {
      height: var(--radix-accordion-content-height);
    }
    to {
      height: 0;
    }
  }
}



@layer utilities {

  /* Hide scrollbar for Chrome, Safari and Opera */
  .scrollbar-none::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge and Firefox */
  .scrollbar-none {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }

  .no-scroll {
    overflow: hidden;
  }

  .card-container-about {
    @apply border-light-dark bg-surface-default xl4k:max-w-full flex flex-col rounded-lg border shadow-sm sm:max-w-full lg:max-w-[250px];
  }

  .card-header-about {
    @apply border-light-dark flex items-center gap-3 rounded-t-lg border-b px-4 py-3;
  }

  .card-header-about-text {
    @apply text-base leading-normal font-normal;
  }

  .card-body-about {
    @apply flex h-full flex-col gap-4 p-3;
  }

  .card-description-about {
    @apply flex h-full flex-col space-y-2 p-1;
  }

  .card-description-title {
    @apply flex items-center gap-1.5;
  }

  .skeleton-text {
    @apply animate-pulse rounded-md bg-gray-300;
  }

  .skeleton-icon {
    @apply animate-pulse rounded-full bg-gray-300;
  }

  .btn-connect-wallet {
    @apply bg-surface-contrast hover:border-light-dark flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-primary hover:border hover:bg-transparent;
  }

  .card-text-accordion {
    @apply text-secondary text-sm leading-normal font-normal;
  }

  .section-title-gap {
    @apply gap-4 sm:gap-6;
  }

  .link-tangerine {
    @apply hover:text-tangerine/80 text-tangerine font-mono text-[13px] leading-none font-medium tracking-wider uppercase;
  }

  .text-table-header {
    @apply text-xs font-semibold sm:font-medium;
  }

  .stage-tooltip-box-shadow {
    box-shadow:
      0px 4px 4px 0px rgba(0, 0, 0, 0.25),
      0px 8px 10px -6px rgba(0, 0, 0, 0.1);
  }

  .section-layout-icon {
    @apply text-secondary size-6;
  }

}


/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }

  h1 {
    @apply text-[40px] leading-[44px] tracking-[-1.2%];
  }

  h2 {
    @apply text-[30px] leading-[36px] tracking-[-0.75%];
  }

  h3 {
    @apply text-[24px] leading-[32px] tracking-[-0.6%];
  }

  h4 {
    @apply text-[20px] leading-[28px] tracking-[-0.5%];
  }


  :root {
    --radius: 0.625rem;
    --base-background: #ffffff;
    --base-foreground: #09090b;
    --base-muted: #F4F4F5;
    --base-muted-foreground: #71717A;
    --base-card: #ffffff;
    --base-card-foreground: #09090b;
    --base-border: #e4e4e7;
    --base-input: #e4e4e7;
    --base-primary: #18181b;
    --base-primary-foreground: #fafafa;
    --base-secondary: #F4F4F5;
    --base-secondary-foreground: #18181b;
    --base-accent: #f4f4f5;
    --base-accent-foreground: #18181b;
    --base-destructive: #ef4444;
    --base-destructive-foreground: #FAFAFA;
    --base-ring: #71717A;
    --base-popover: #ffffff;
    --base-popover-foreground: #09090b;
    --base-sidebar: #fafafa;
    --base-sidebar-foreground: #09090b;
    --base-sidebar-primary: #18181b;
    --base-sidebar-primary-foreground: #fafafa;
    --base-sidebar-accent: #f5f5f6;
    --base-sidebar-accent-foreground: #18181b;
    --base-sidebar-border: #e4e4e7;

    --base-chart-1: #3b82f6;
    --base-chart-2: #ec4899;
    --base-chart-3: #f59e0b;
    --base-chart-4: #a855f7;
    --base-chart-5: #10b981;
    --base-chart-6: #06b6d4;
    --base-chart-7: #fbbf24;

    /* Custom Colors */
    --base-primary-opacity: #FAFAFA1F;
    --base-primary-opacity-darker: #FAFAFAB3;
    --base-brand: #ec762e;
    --base-brand-lighter: #FB8F4D;
    --base-brand-opacity: #FB8F4D1F;
    --base-success: #4ade80;
    --base-success-opacity: #4ade801F;
    --base-warning: #facc15;
    --base-warning-opacity: #facc151F;
    --base-error: #f87171;
    --base-error-opacity: #f871711F;
    --base-destructive-hover: #F87171;
    --base-dimmed: #A1A1AA;


  }

  .dark {
    --base-background: #09090b;
    --base-foreground: #fafafa;
    --base-muted: #27272A;
    --base-muted-foreground: #a1a1aa;
    --base-card: #09090B;
    --base-card-foreground: #fafafa;
    --base-popover: #09090B;
    --base-popover-foreground: #fafafa;
    --base-border: #3f3f46;
    --base-input: #3f3f46;
    --base-primary: #fafafa;
    --base-primary-foreground: #18181b;
    --base-secondary: #27272a;
    --base-secondary-foreground: #fafafa;
    --base-accent: #27272a;
    --base-accent-foreground: #fafafa;
    --base-destructive: #7f1d1d;
    --base-destructive-foreground: #FAFAFA;
    --base-ring: #A1A1AA;

    --base-chart-1: #3b82f6;
    --base-chart-2: #ec4899;
    --base-chart-3: #f59e0b;
    --base-chart-4: #a855f7;
    --base-chart-5: #10b981;
    --base-chart-6: #06b6d4;
    --base-chart-7: #fbbf24;

    /* Custom Colors */
    --base-primary-opacity: #FAFAFA1F;
    --base-primary-opacity-darker: #FAFAFAB3;
    --base-brand: #ec762e;
    --base-brand-lighter: #FB8F4D;
    --base-brand-opacity: #FB8F4D1F;
    --base-success: #4ade80;
    --base-success-opacity: #4ade801F;
    --base-warning: #facc15;
    --base-warning-opacity: #facc151F;
    --base-error: #f87171;
    --base-error-opacity: #f871711F;
    --base-destructive-hover: #991B1B;
    --base-dimmed: #52525B;

  }
}

